# vigil

./: .gitignore  Cargo.toml  README.md  justfile
debian/: postinst  vigil.service
src/: logging.rs  main.rs  watchdog.rs  watcher.rs
